Archive2/69/bb565a78bac539/output
main.cpp:2:5: error: 'set' does not name a type
     set target = 99
     ^
main.cpp:5:9: error: expected unqualified-id before 'for'
         for dime_count in range(0, remain_after_quarters/10):
         ^
main.cpp:7:13: error: expected unqualified-id before 'for'
             for nickel_count in range(0, remain_after_dimes/5):
             ^
main.cpp:9:17: error: 'dioph_combinations' does not name a type
                 dioph_combinations.append(quarter_count, dime_count, nickel_count, penny_count);
                 ^
